Add source selection radio buttons to analyze form

--- a/analyzer/templates/analyzer/analyze.html
+++ b/analyzer/templates/analyzer/analyze.html
@@ -170,7 +170,12 @@
             {% csrf_token %}
 
             <div class="mb-3">
-                
+                <label class="ds07-label">Seleccionar origen</label>
+                <div>
+                    {% for radio in form.source %}
+                        <label class="me-3">{{ radio.tag }} {{ radio.choice_label }}</label>
+                    {% endfor %}
+                </div>
             </div>
 
             <div id="file-box" class="mb-3">
@@ -178,7 +183,10 @@
                 {{ form.arff_file }}
             </div>
 
-            
+            <div id="github-box" class="mb-3" style="display:none;">
+                <label class="ds07-label">URL de GitHub</label>
+                {{ form.github_url }}
+            </div>
 
             <div class="text-end">
                 <button class="ds07-btn">Visualizar</button>
@@ -262,3 +270,4 @@
 
 </body>
 </html>
+
